# pa2

./: .gitignore  CMakeLists.txt  borderColorPicker.cpp  borderColorPicker.h  customColorPicker.cpp  customColorPicker.h  deque.cpp  filler.cpp  filler.h  partners.txt  queue.cpp  rainbowColorPicker.cpp  rainbowColorPicker.h  stack.cpp  stripeColorPicker.cpp  stripeColorPicker.h  testFills.cpp
